# GameOfLife

./: CMakeLists.txt
include/: AlwaysNextTurn.hpp  CommandSource.hpp  Controller.hpp  InputController.hpp  UpdateController.hpp  UserCommands.hpp  cylinder_board.hpp  donut_board.hpp  static_board.hpp  view.hpp
src/: AlwaysNextTurn.cpp  InputController.cpp  UpdateController.cpp  UserCommands.cpp  cylinder_board.cpp  donut_board.cpp  main.cpp  static_board.cpp  view.cpp
